{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 161,
  "lineage": "7ec25f87-ac6c-5a11-5131-1a2b859e3990",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:security-group/sg-02c9218294d92fa96",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c9218294d92fa96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "422021712587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00999044593c895de",
            "arn": "arn:aws:ec2:ap-south-1:422021712587:instance/i-0d39aab826eadefac",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d39aab826eadefac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-097af8ca42a8ece57",
            "private_dns": "ip-10-10-0-65.ap-south-1.compute.internal",
            "private_ip": "10.10.0.65",
            "public_ip": "3.108.228.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0ce439f798f6e7239",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c4830f27f833e1df",
            "tags": {
              "Name": "NAT-instance-default"
            },
            "tags_all": {
              "Name": "NAT-instance-default"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a3a89fd2530b671d"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:internet-gateway/igw-057cf6960198d961e",
            "id": "igw-057cf6960198d961e",
            "owner_id": "422021712587",
            "tags": {
              "Name": "mini-proj-IGW"
            },
            "tags_all": {
              "Name": "mini-proj-IGW"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:route-table/rtb-0fb696b121e1d4d4a",
            "id": "rtb-0fb696b121e1d4d4a",
            "owner_id": "422021712587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0d39aab826eadefac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:route-table/rtb-0c0299f61a57e4d44",
            "id": "rtb-0c0299f61a57e4d44",
            "owner_id": "422021712587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057cf6960198d961e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdcdc97d08423961",
            "route_table_id": "rtb-0c0299f61a57e4d44",
            "subnet_id": "subnet-0c4830f27f833e1df"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0900300106d3f39f5",
            "route_table_id": "rtb-0c0299f61a57e4d44",
            "subnet_id": "subnet-0dceec8714711ed0e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b8737677ad009e3",
            "route_table_id": "rtb-0c0299f61a57e4d44",
            "subnet_id": "subnet-007dffce067487672"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a81426187e7c37a",
            "route_table_id": "rtb-0fb696b121e1d4d4a",
            "subnet_id": "subnet-0df5ff998bd118bbd"
          },
          "dependencies": [
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0837826180d434d29",
            "route_table_id": "rtb-0fb696b121e1d4d4a",
            "subnet_id": "subnet-0661d4938a534f06c"
          },
          "dependencies": [
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af39d31625ffb03",
            "route_table_id": "rtb-0fb696b121e1d4d4a",
            "subnet_id": "subnet-07c8162e88080cf0a"
          },
          "dependencies": [
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-0df5ff998bd118bbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0df5ff998bd118bbd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-0661d4938a534f06c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0661d4938a534f06c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-07c8162e88080cf0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.5.0/24",
            "id": "subnet-07c8162e88080cf0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-0c4830f27f833e1df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "id": "subnet-0c4830f27f833e1df",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-0dceec8714711ed0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0dceec8714711ed0e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:subnet/subnet-007dffce067487672",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-007dffce067487672",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "422021712587",
            "tags": {
              "Name": "Public-subnet"
            },
            "tags_all": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-0ed11526048f57f27"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:422021712587:vpc/vpc-0ed11526048f57f27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06fd82eae33eb26af",
            "default_route_table_id": "rtb-095d9557d1e031440",
            "default_security_group_id": "sg-0a3a89fd2530b671d",
            "dhcp_options_id": "dopt-3ee84455",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ed11526048f57f27",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-095d9557d1e031440",
            "owner_id": "422021712587",
            "tags": {
              "Name": "mini-proj"
            },
            "tags_all": {
              "Name": "mini-proj"
            }
          }
        }
      ]
    }
  ]
}